--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,28 @@
+amqp==5.0.6
 asgiref==3.3.4
+billiard==3.6.4.0
+celery==5.1.0
+click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.2.0
 Django==3.2.4
+django-celery-beat==2.2.0
 django-js-asset==1.2.2
 django-mptt==0.12.0
+django-redis==5.0.0
+django-seed==0.2.2
+django-timezone-field==4.1.2
 djangorestframework==3.12.4
+Faker==8.7.0
+kombu==5.1.0
+prompt-toolkit==3.0.18
+python-crontab==2.5.1
+python-dateutil==2.8.1
 pytz==2021.1
+redis==3.5.3
+six==1.16.0
 sqlparse==0.4.1
+text-unidecode==1.3
+vine==5.0.0
+wcwidth==0.2.5
