--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,49 @@
-version: '3'
+version: '3.7'
 
 
 services:
+  db:
+    image: postgres
+    volumes:
+      - 'pgdata:/var/lib/postgresql/data'
+    environment:
+      - POSTGRES_DB=employees
+      - POSTGRES_USER=vitali
+      - POSTGRES_PASSWORD=password
+    ports:
+      - "5434:5432"
+    restart: always
+
   redis:
     image: redis
     ports:
       - '6379:6379'
+    restart: always
+
+  web:
+    build: .
+    command: python manage.py runserver 0.0.0.0:8010
+    volumes:
+      - .:/code
+    ports:
+      - "8010:8010"
+    depends_on:
+      - db
+      - redis
+    restart: always
+
+  celery_worker:
+    build: .
+    restart: always
+    command: celery -A  rocket_data worker -l INFO --pool=solo --beat
+    volumes:
+      - 'pgdata:/var/lib/postgresql/data'
+    depends_on:
+      - redis
+      - db
+    environment:
+      IS_DELETE_TEMP_DB: "false"
+      DJANGO_SETTINGS_MODULE: "rocket_data.settings"
+
+volumes:
+  pgdata:
